add syllabus note

--- a/Slides/00_intro/deck0.tex
+++ b/Slides/00_intro/deck0.tex
@@ -545,4 +545,14 @@ You can refer to the syllabus at \webURL{\CourseSite}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\begin{frame}
+
+\begin{center}
+\includegraphics[width=0.6\textwidth]{figures/dont_always_syllabus.jpg}
+\end{center}
+
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \end{document}
