--- a/Labs/lab2/intro_to_data.Rmd
+++ b/Labs/lab2/intro_to_data.Rmd
@@ -11,175 +11,211 @@ output:
 knitr::opts_chunk$set(eval = FALSE)
 library(dplyr)
 library(ggplot2)
+load(url("https://stat.duke.edu/~mc301/data/nycflights.RData"))
 ```
 
 <div id="template">
 **Your reproducible lab report: ** Before you get started, download the R Markdown 
 template for this lab. Remember all of your code and answers go in this document:
 ```{r load-template, eval = FALSE}
-download("http://stat.duke.edu/courses/Spring16/sta101.001/rmd/lab2.Rmd", 
-         destfile = "lab2.Rmd")
+download.file("http://stat.duke.edu/courses/Spring16/sta101.001/rmd/lab2.Rmd", destfile = "lab2.Rmd")
 ```
 </div>
 
-Some define Statistics as the field that focuses on turning information into
+Some define statistics as the field that focuses on turning information into
 knowledge. The first step in that process is to summarize and describe the raw
-information - the data. In this lab, you will gain insight into public health
-by generating simple graphical and numerical summaries of a data set collected 
-by the Centers for Disease Control and Prevention (CDC). As this is a large 
+information - the data. In this lab we explore flights, specifically a random
+sample of `r nrow(nycflights)` domestic flights that departed from the three New 
+York City airport in 2013. We will generate simple graphical and numerical 
+summaries of data on these flights and explore delay times. As this is a large 
 data set, along the way you'll also learn the indispensable skills of data 
 processing and subsetting.
 
 <div id="boxedtext">
-**A note on expectations: ** For each exercise and on your own question you answer
-include any relevant output (tables, summary statistics, plots) in your answer. Doing 
-this is easy! Just place any relevant R code in a code chunk, and hit Knit HTML.
+**A note on expectations: ** For each exercise and on your own question you 
+answer include any relevant output (tables, summary statistics, plots) in your 
+answer. Doing this is easy! Just place any relevant R code in a code chunk, 
+and hit Knit HTML.
 </div>
 
 ## Getting started
 
-The Behavioral Risk Factor Surveillance System (BRFSS) is an annual telephone 
-survey of 350,000 people in the United States. As its name implies, the BRFSS 
-is designed to identify risk factors in the adult population and report 
-emerging health trends. For example, respondents are asked about their diet and 
-weekly physical activity, their HIV/AIDS status, possible tobacco use, and even
-their level of healthcare coverage. The BRFSS Web site 
-([http://www.cdc.gov/brfss](http://www.cdc.gov/brfss)) contains a complete 
-description of the survey, including the research questions that motivate the 
-study and many interesting results derived from the data.
+### Data
 
-We will focus on a random sample of 20,000 people from the BRFSS survey 
-conducted in 2000. While there are over 200  variables in this data set, we will
-work with a small subset.
+The [Bureau of Transportation Statistics](http://www.rita.dot.gov/bts/about/) 
+(BTS) is a statistical agency that is a part of the Research and Innovative 
+Technology Administration (RITA). As its name implies, BTS collects and makes 
+available transportation data, such as the flights data we will be working with 
+in this lab.
 
-We begin by loading the data set of 20,000 observations into the R workspace. 
-After launching RStudio, enter the following command.
+We begin by loading the data set of `r nrow(nycflights)` observations into the R 
+workspace. After launching RStudio, enter the following command.
 
 ```{r load-data}
-load(url("https://stat.duke.edu/~mc301/data/cdc.RData"))
+load(url("https://stat.duke.edu/~mc301/data/nycflights.RData"))
 ```
 
-The data set `cdc` that shows up in your workspace is a *data matrix*, with each
-row representing a *case* and each column representing a *variable*. R calls 
-this data format a *data frame*, which is a term that will be used throughout 
-the labs.
+The data set `nycflights` that shows up in your workspace is a *data matrix*, 
+with each row representing an *observation* and each column representing a 
+*variable*. R calls this data format a **data frame**, which is a term that will 
+be used throughout the labs.
 
 To view the names of the variables, type the command
 
 ```{r names}
-names(cdc)
+names(nycflights)
 ```
 
-This returns the names `genhlth`, `exerany`, `hlthplan`, `smoke100`, `height`, 
-`weight`, `wtdesire`, `age`, and `gender`. Each one of these variables 
-corresponds to a question that was asked in the survey. For example, for 
-`genhlth`, respondents were asked to evaluate their general health, responding
-either excellent, very good, good, fair or poor. The `exerany` variable 
-indicates whether the respondent exercised in the past month (1) or did not (0).
-Likewise, `hlthplan` indicates whether the respondent had some form of health 
-coverage (1) or did not (0). The `smoke100` variable indicates whether the 
-respondent had smoked at least 100 cigarettes in her lifetime. The other 
-variables record the respondent's `height` in inches, `weight` in pounds as well
-as their desired weight, `wtdesire`, `age` in years, and `gender`.
+This returns the names of the variables in this data frame. The **codebook**
+(description of the variables) is included below.
 
-A very useful function for taking a quick peek at your dataset, and viewing
-its dimensions and data types is `str`.
+- `year`, `month`, `day`: Date of departure
+- `dep_time`, `arr_time`: Departure and arrival times, local timezone.
+- `dep_delay`, `arr_delay`: Departure and arrival delays, in minutes. Negative times represent early departures/arrivals.
+- `carrier`: Two letter carrier abbreviation.
+    + `9E`:           Endeavor Air Inc.
+    + `AA`:      American Airlines Inc.
+    + `AS`:        Alaska Airlines Inc.
+    + `B6`:             JetBlue Airways
+    + `DL`:        Delta Air Lines Inc.
+    + `EV`:    ExpressJet Airlines Inc.
+    + `F9`:      Frontier Airlines Inc.
+    + `FL`: AirTran Airways Corporation
+    + `HA`:      Hawaiian Airlines Inc.
+    + `MQ`:                   Envoy Air
+    + `OO`:       SkyWest Airlines Inc.
+    + `UA`:       United Air Lines Inc.
+    + `US`:             US Airways Inc.
+    + `VX`:              Virgin America
+    + `WN`:      Southwest Airlines Co.
+    + `YV`:          Mesa Airlines Inc.
+- `tailnum`: Plane tail number
+- `flight`: Flight number
+- `origin`, `dest`: Airport codes for origin and destination. (Google can help
+you with what code stands for which airport.)
+- `air_time`: Amount of time spent in the air, in minutes.
+- `distance`: Distance flown, in miles.
+- `hour`, `minute`: Time of departure broken in to hour and minutes.
+
+A very useful function for taking a quick peek at your data frame, and viewing
+its dimensions and data types is `str`, which stands for **str**ucture.
 
 ```{r cdc}
-str(cdc)
+str(nycflights)
 ```
 
-Note that R calls categorical variables `factor`s.
+The `nycflights` data frame is a massive trove of information. Let's think about 
+some questions we might want to answer with these data:
 
-1.  How many cases are there in this data set? How many variables? For each 
-    variable, identify its data type (e.g. categorical: ordinal or not,
-    numerical: continuous or discrete). Do not just rely on the R output,
-    also think about the nature of the variables.
+- We might want to find out how delayed flights headed to a particular 
+destination tend to be. 
+- We might want to evaluate how departure delays vary over months. 
+- Or we might want to determine which of the three NYC airports has a better 
+on time percentage for departing flights.
 
-## Describing distributions
+### R Packages
 
-### Histograms
+In this lab we will explore these questions using the `dplyr` package for data
+wrangling and the `ggplot2` package for data visualization. So let's load these 
+packages:
 
-The BRFSS questionnaire is a massive trove of information. A good first step in
-any analysis is to distill all of that information into a few summary statistics
-and graphics. 
+```{r}
+library(ggplot2)
+library(dplyr)
+```
 
-Let's start with some histograms. We can create a the histogram for the age of
-our respondents with the following command:
+### Seven verbs
+
+The `dplyr` package offers seven verbs (functions) for basic of data 
+manipulation:
+
+- `filter()`
+- `arrange()`
+- `select()` 
+- `distinct()`
+- `mutate()`
+- `summarise()`
+- `sample_n()`
+
+We will use some of these functions in this lab, and learn about others in a 
+future lab.
+
+## Analysis
+
+### Departure delays in flights to Raleigh-Durham (RDU)
+
+We can examine the distribution of departure delays of all flights with a 
+histogram.
 
 ```{r hist-age-geom}
-qplot(x = age, data = cdc, geom = "histogram")
+qplot(x = dep_delay, data = nycflights, geom = "histogram")
 ```
 
-This functions says to plot `age` on the x-axis. It also defines a `geom` (short for 
-geometric object), which describes the type of plot you will produce. 
-
-Actually, since the default `geom` for a single numerical variable is a histogram, 
-we could get away with not defining a `geom` and still get the same plot:
-
-```{r hist-age}
-qplot(x = age, data = cdc)
-```
-
-It's a good idea to be explicit in our code and always define all options (and not
-rely on default settings), especially when we're first learning a new language.
+This functions says to plot `dep_delay` from the `nycflights` data frame on the 
+x-axis. It also defines a `geom` (short for geometric object), which describes 
+the type of plot you will produce. 
 
 Histograms are generally a very good way to see the shape of a single 
 distribution, but that shape can change depending on how the data is split 
 between the different bins. You can easily define the binwidth you want to use:
 
 ```{r hist-bmi}
-qplot(x = age, data = cdc, geom = "histogram", binwidth = 1)
-qplot(x = age, data = cdc, geom = "histogram", binwidth = 20)
+qplot(x = dep_delay, data = nycflights, geom = "histogram", binwidth = 15)
+qplot(x = dep_delay, data = nycflights, geom = "histogram", binwidth = 150)
 ```
 
-How do these histograms with the various binwidths compare?
+1.  How do these three histograms with the various binwidths compare?
 
-### Summary statistics
+If we want to focus on departure delays of flights headed to RDU only, we need to
+first `filter` the data for flights headed to RDU (`dest == "RDU"`) and then make
+a histogram of only departure delays of only those flights.
 
-As a simple example, the function `summary` returns a numerical 
-summary: minimum, first quartile, median, mean, third quartile, maximum.
-
-To calculate the summary statistics for `weight`, type
-
-```{r summary-weight}
-cdc %>%
-  select(weight) %>%
-  summary()
+```{r}
+rdu_flights <- nycflights %>%
+  filter(dest == "RDU")
+qplot(x = dep_delay, data = rdu_flights, geom = "histogram")
 ```
+
+Let's decipher these three lines of code:
+
+- Line 1: Take the `nycflights` data frame, `filter` for flights headed to RDU, and 
+save as a new data frame called `rdu_flights`.
+    + `==` means "if it's equal to".
+    + `RDU` goes in quotation marks because it's a character string.
+- Line 2: Basically the same `qplot` call from earlier for making a histogram, 
+except the data frame is not the data frame of all flights, but the newly 
+constructed `rdu_flights`.
 
 <div id="boxedtext">
-**A note on piping: ** Remember that we can read these three lines of code as the following: 
+**Logical operators: ** Filtering for certain observations (e.g. flights from a 
+particular airport) is often of interest in data frames where we might want to 
+examine observations with certain characteristics separately from the rest of 
+the data. To do so we use the `filter` function and a series of 
+**logical operators**. The most commonly used logical operators for data 
+analysis are as follows:
 
-*"Take the `cdc` dataset and **pipe** it into the `select` function. Using this 
-function select the variable called `weight`, and **pipe** this 
-variable into the `summary` function."*
-
-The `%>%` operator is called the **piping** operator. Basically, it takes the output
-of the current line and pipes it into the following line of code.
+- `==` means "equal to"
+- `!=` means "not equal to"
+- `>` or `<` means "greater than" or "less than"
+- `>=` or `<=` means "greater than or equal to" or "less than or equal to"
 </div>
 
-Since R also functions like a very fancy calculator, you can use these statistics
-to then calculate the interquartile range for the respondents' weight, as the value
-of Q3 - Q1.
+We can also obtain numerical summaries for these flights:
 
-```{r weight-range-arith}
-190 - 140
+```{r}
+rdu_flights %>%
+  summarise(mean_ddel = mean(dep_delay), sd_ddel = sd(dep_delay), n = n())
 ```
 
-You can also individually calculate summary statistics, and make your own customized list
-of them using the `summarise` function:
+Note that in the `summarise` function we created a list of two elements. The 
+names of these elements are user defined, like `mean_ddel`, `sd_ddel`, `n`, and 
+you could customize these names as you like (just don't use spaces in your 
+names). Calculating these summary statistics also require that you know the 
+function calls. Note that `n()` reports the sample size.
 
-```{r summary-custom-list}
-cdc %>%
-  summarise(mean_wt = mean(weight), sd_wt = sd(weight), mean_ht = mean(height), sd_ht = sd(height))
-```
-
-Note that in the `summarise` function we created a list of four elements. The names
-of these elements are user defined, like `mean_wt`, `sd_wt`, etc. and you could
-customize these names as you like (just don't use spaces in your names). Calculating
-these summary statistics also require that you know the function calls. Some useful
-function calls for summary statistics for a single numerical variable are as follows:
+<div id="boxedtext">
+**Summary statistics: ** Some useful function calls for summary statistics for a 
+single numerical variable are as follows:
 
 - `mean`
 - `median`
@@ -189,263 +225,164 @@ function calls for summary statistics for a single numerical variable are as fol
 - `range`
 - `min`
 - `max`
+</div>
 
-Another useful functionality is being able to quickly calculate summary statistics for
-various groups in your dataset. For example, we can modify the above command using the
-`group_by` function  to get the same summary stats for males and females:
+1.  Create a new data frame that includes flights headed to SFO in February, 
+    and save this data frame as `sfo_feb_flights`. How many flights 
+    meet these criteria? 
+    
+1.  Describe the distribution of the arrival delays of these flights using a 
+    histogram and appropriate summary statistics. **Hint:** The summary 
+    statistics you need will depend on the shape of the distribution.
+    
+Another useful functionality is being able to quickly calculate summary 
+statistics for various groups in your data frame. For example, we can modify the 
+above command using the `group_by` function  to get the same summary stats for 
+males and females:
 
 ```{r summary-custom-list-gender}
-cdc %>%
-  group_by(gender) %>%
-  summarise(mean_wt = mean(weight), sd_wt = sd(weight), mean_ht = mean(height), sd_ht = sd(height))
+rdu_flights %>%
+  group_by(origin) %>%
+  summarise(mean_ddel = mean(dep_delay), sd_ddel = sd(dep_delay), n = n())
 ```
 
-Here, we first grouped the data by gender, and then calculated the summary statistics.
+Here, we first grouped the data by gender, and then calculated the summary 
+statistics.
 
-2.  Calculate the median and interquartile range for `weight`s of people who
-    did and did not exercise in the last month.
+1.  Calculate the median and interquartile range for `arr_delay`s of flights in
+    in the `sfo_feb_flights` data frame, grouped by carrier. Which carrier
+    is the has the most variable arrival delays?
+
+### Departure delays over months
+
+Which month would you expect to have the highest average delay departing 
+from an NYC airport?
+
+Let's think about how we would answer this question:
+
+- First, calculate monthly averages for departure delays. With the new language
+we are learning, we need to
+    + `group_by` months, then
+    + `summarise` mean departure delays.
+- Then, we need to `arrange` these average delays in `desc`ending order
+
+```{r}
+nycflights %>%
+  group_by(month) %>%
+  summarise(mean_ddel = mean(dep_delay)) %>%
+  arrange(desc(mean_ddel))
+```
+
+1.  Which month has the highest average departure delay from an NYC airport? What
+    about the highest median departure delay? Which of these measures is more 
+    reliable for deciding which month(s) to avoid flying if you really dislike 
+    delayed flights.
     
-### Tables
+We can also the distributions of departure delays across months using 
+side-by-side box plots:
 
-While it makes sense to describe a quantitative variable like `weight` in terms
-of these statistics, what about categorical data? We would instead consider the
-sample frequency or relative frequency distribution. The function `table` does
-this for you by counting the number of times each kind of response was given.
-For example, to see the number of people who have smoked 100 cigarettes in their
-lifetime, type
-
-```{r table-smoke}
-cdc %>%
-  select(smoke100) %>%
-  table()
+```{r}
+qplot(y = dep_delay, x = factor(month), data = nycflights, geom = "boxplot")
 ```
 
-or instead look at the relative frequency distribution by typing
+There is some new syntax here: We want departure delays on the y-axis and the
+months on the x-axis to produce side-by-side box plots. Then what does `factor()`
+stand for? R calls categorical variables `factor`s. Months are coded as numbers
+1-12 in the data frame, and hence R automatically assumes `month` to be a 
+numerical variable. `factor(month)` forces the month variable to be treated as 
+categorical.
 
-```{r table-smoke-prop}
-cdc %>%
-  select(smoke100) %>%
-  table()/20000
+### On time departure rate for NYC airports
+
+Suppose you will be flying out of NYC and want to know which of the 
+three airports has the best on time departure rate of departing flights. 
+Suppose also that for you a flight that is delayed for less than 5 minutes is 
+basically "on time". You consider any flight delayed for 5 minutes of more to be 
+"delayed".
+
+In order to determine which airport has the best on time departure rate, 
+we need to 
+
+- first classify each flight as "on time" or "delayed",
+- then group flights by origin airport,
+- then calculate on time departure rates for each origin airport,
+- and finally arrange the airports in descending order for on time departure
+percentage.
+
+Let's start with classifying each flight as "on time" or "delayed" by
+creating a new variable with the `mutate` function.
+
+```{r}
+nycflights <- nycflights %>%
+  mutate(dep_type = ifelse(dep_delay < 5, "on time", "delayed"))
 ```
 
-Notice how R automatically divides all entries in the table by 20,000 in the 
-command above. 
+The first argument in the `mutate` function is the name of the new variable
+we want to create, `dep_type`. Then if `dep_delay < 5` we classify the flight
+as `"on time"` and `"delayed"` if not (i.e. if the flight is delayed for 5 
+minutes or more).
 
-To make a bat plot of these data, use the following:
+Note that we are also overwriting the `nycflights` data frame with the new 
+version of this data frame that includes the new `dep_type` variable.
 
-```{r table-smoke-barplot}
-qplot(x = smoke100, data = cdc)
+We can handle all the remaining steps in one code chunk:
+
+```{r}
+nycflights %>%
+  group_by(origin) %>%
+  summarise(ot_dep_rate = sum(dep_type == "on time") / n()) %>%
+  arrange(desc(ot_dep_rate))
 ```
 
-3.  Compute the relative frequency distribution for `gender` and also for `genhlth`. 
-    How many males are in the sample? What proportion of the sample reports 
-    being in excellent health?
+1.  If you were selecting an airport simply based on on time departure 
+    percentage, which NYC airport would you choose to fly out of?
 
-The `table` command can be used to create contingency tables as well. 
-For example, to examine which participants have smoked across each 
-gender, we could use the following.
+We can also visualize the distribution of on on time departure rate across 
+the three airports using a segmented bar plot.
 
-```{r table-smoke-gender}
-cdc %>%
-  select(gender, smoke100) %>%
-  table()
+```{r}
+qplot(x = origin, fill = dep_type, data = nycflights, geom = "bar")
 ```
-
-4. **a.** What percent of males are smokers? What percent of females are smokers? 
-**b.** What percent of the sample are males who are smokers? What percent of the sample 
-are females who are smokers? **c.** Which pair of statistics is more useful for 
-determining whether males or females are more likely to be smokers? Explain your 
-reasoning.
-    
-## Visualizing relationships
-
-### Between two numercial variables
-
-In the last lab we visualized relationships between two numerical variables using
-scatterplots. As a quick reminder, let's make one more of those:
-
-```{r height-weight}
-qplot(x = weight, y = height, data = cdc, geom = "point")
-```
-
-How are these two variables related?
-
-### Between two categorical variables
-
-To create a segmented bar plots we can use the following two optoons.
-
-```{r mosaic-smoke-gender}
-qplot(x = gender, fill = smoke100, data = cdc)
-qplot(x = gender, fill = smoke100, data = cdc, position = "fill")
-```
-
-5.  How are the two plots different from each other? Which one is more
-    useful for comparing the *proportions* of male and female smokers?
-
-### Between a numerical and a categorical variable
-
-The purpose of a boxplot is to provide a thumbnail sketch of a variable for the purpose 
-of comparing across several categories. So we can, for example, compare the heights of 
-men and women with 
-
-```{r boxplot-height-gender}
-qplot(y = height, x = gender, data = cdc, geom = "boxplot")
-```
-
-The notation here is new. `geom`, short for geometric objects, describe the type of 
-plot you will produce. So we're asking R to give us a box plots of heights where 
-the groups are defined by gender. 
-
-Next let's consider a new variable that doesn't show up directly in this data 
-set: Body Mass Index (BMI) 
-([http://en.wikipedia.org/wiki/Body_mass_index](http://en.wikipedia.org/wiki/Body_mass_index)). 
-BMI is a weight to height ratio, and can be calculated as:
-
-\[ BMI = \frac{weight~(lb)}{height~(in)^2} * 703 \]
-
-703 is the approximate conversion factor to change units from metric (meters and 
-kilograms) to imperial (inches and pounds).
-
-We can use the `mutate` function to create this new variable and add it to the
-`cdc` dataset:
-
-```{r bmi}
-cdc <- cdc %>%
-  mutate(bmi = (weight / height^2) * 703)
-```
-
-Notice that `(weight / height^2) * 703` is just some arithmetic, but it's applied to 
-all 20,000 values in the dataset. That is, for each of the 20,000 
-participants, we take their weight, divide by their height-squared and then 
-multiply by 703. The result is 20,000 BMI values, one for each respondent. This 
-is one reason why we like R: it lets us perform computations like this using 
-very simple expressions.
-
-Now we can use this new variable in our analysis. For example, let's create side-by-side 
-box plots of `bmi` over the levels of `genhlth`:
-
-```{r boxplot-bmi-genhlth}
-qplot(y = bmi, x = genhlth, data = cdc, geom = "boxplot")
-```
-
-Discuss what this box plot shows in your team.
-
-6.  Pick another categorical variable from the data set and see how it relates to BMI.
-    List the variable you chose, why you might think it would have a relationship to 
-    BMI, create side-by-side box plots of the distribution of BMI over this variable,
-    and provide an interpretation for this plot.
-
-## Subsetting
-
-It's often useful to extract all individuals (cases) in a data set that have 
-specific characteristics. We can do this easily using the `filter` function and
-a series of **logical operators**. The most commonly used logical operators for
-data analysis are
-
-- `==` means "equal to"
-- `!=` means "not equal to"
-- `>` or `<` means "greater than" or "less than"
-- `>=` or `<=` means "greater than or equal to" or "less than or equal to"
-
-Using these, we can create a subset of the `cdc` dataset for just the men, and save 
-this as a new dataset called `males`:
-
-```{r males}
-males <- cdc %>%
-  filter(gender == "m")
-```
-
-Here, we've created a new object, called `males`. The special symbol `<-` 
-performs an *assignment*, taking the output of one line of code and saving it 
-into this new object that you defined.
-
-We can take look at the contents of this object by clicking on it in the 
-*Environment* tab, or by typing the following command we can view the first few 
-lines of it
-
-```{r head-males}
-head(males)
-```
-
-We don't want to print the entire dataset since it's pretty large, taking
-a look at just the first few lines should give you a good idea of what it
-looks like.
-
-This new data set contains all the same variables but just under half the rows.
-It is also possible to tell R to keep only specific variables using the `select`
-function we learned earlier, but this is not relevant here since we are focusing
-on subsetting a dataset based on values of one or more variables.
-
-As an aside, you can use several of these conditions together with `&` and `|`.
-The `&` is read "and" so that
-
-```{r males-and-over30}
-males_and_over30 <- cdc %>%
-  filter(gender == "m" & age > 30)
-```
-
-will give you the data for men over the age of 30. The `|` character is read 
-"or" so that
-
-```{r males-or-over30}
-males_or_over30 <- cdc %>%
-  filter(gender == "m" | age > 30)
-```
-
-will take people who are men or over the age of 30 (why that's an interesting 
-group is hard to say, but right now the mechanics of this are the important 
-thing). In principle, you may use as many "and" and "or" clauses as you like 
-when forming a subset.
-
-7.  Create a new object called `under23_and_smoke` that contains all observations 
-    of respondents under the age of 23 that have smoked 100 cigarettes in their 
-    lifetime. Write the command you used to create the new object as the answer
-    to this exercise, and report the number of cases that meet this criteria.
-    
-## Recap
-
-At this point, we've done a good first pass at analyzing the information in the 
-BRFSS questionnaire. We've found an interesting association between smoking and
-gender, and we can say something about the relationship between people's 
-assessment of their general health and their own BMI. We've also picked up 
-essential computing tools -- summary statistics, subsetting, and plots -- that 
-will serve us well throughout this course.
 
 * * *
 
-<div class="oyo">
-
 ## On Your Own
 
--   Make a scatterplot of weight versus desired weight. Describe the 
-    relationship between these two variables.
+<div class="oyo">
 
--   Let's consider a new variable: the difference between desired weight 
-    (`wtdesire`) and current weight (`weight`). Create this new variable by 
-    subtracting the two columns in the data frame and assigning them to a new 
-    variable in the `cdc` dataset called `wdiff`.
+-   Mutate the data so that it includes a new variable that contains the 
+    average speed, `avg_speed` traveled by the plane for each flight (in mph).
+    **Hint:** Average speed can be calculated as distance divided by
+    number of hours of travel, and note that `air_time` is given in minutes.
 
--   What type of data is `wdiff`? If an observation `wdiff` is 0, what does 
-    this mean about the person's weight and desired weight. What if `wdiff` is 
-    positive or negative? *Hint:* This is the only exercise in this lab that
-    doesn't require code to answer.
+-   What is the tail number of the plane with the fastest `avg_speed`? 
+    **Hint:** If you just want to show the `avg_speed` and `tailnum` and
+    none of the other variables, use the select function at the end of your
+    pipe to select just these two variables with `select(avg_speed, tailnum)`.
+    You can google this tail number to find out more about the aircraft.
+    
+-   Make a scatterplot of `avg_speed` vs. `distance`. Describe the relationship
+    between average speed and distance.
+    **Hint:** Use `geom = "point"`.
 
--   Describe the distribution of `wdiff` in terms of its center, shape, and 
-    spread, including any plots and numerical summaries you use. What does this 
-    tell us about how people feel about their current weight?
+-   Suppose you define a flight to be "on time" if it gets to the destination
+    on time or earlier than expected, regardless of any departure delays.
+    Mutate the data frame to create a new variable called `arr_type` with
+    levels `"on time"` and `"delayed"` based on this definition. Then,
+    determine the on time arrival percentage based on whether the flight
+    departed on time or not. What percent of flights  that were `"delayed"`
+    departing arrive `"on time"`?
 
--   Using numerical summaries and a side-by-side box plots, determine if men tend
-    to view their weight differently than women.
+-   Replicate the following plot. **Hint:** The data frame plotted only
+    contains flights from American Airlines, Delta Airlines, and United
+    Airlines, and the points are `color`ed by `carrier. Once you replicate
+    the plot, determine (roughly) what the cutoff point is for departure
+    delays where you can still expect to get to your destination on time.
 
--   Now it's time to get creative. Find the mean and standard deviation of 
-    `weight` and determine what proportion of the weights are within one 
-    standard deviation of the mean.
+```{r echo=FALSE, eval=TRUE, fig.width=7, fig.height=4}
+dl_aa_ua <- nycflights %>%
+  filter(carrier == "AA" | carrier == "DL" | carrier == "UA")
+qplot(x = dep_delay, y = arr_delay, data = dl_aa_ua, color = carrier)
+```
 
-</div>
-
-<div id="license">
-This is a product of OpenIntro that is released under a 
-[Creative Commons Attribution-ShareAlike 3.0 Unported](http://creativecommons.org/licenses/by-sa/3.0). 
-This lab was adapted for OpenIntro by Andrew Bray and Mine &Ccedil;etinkaya-Rundel 
-from a lab written by Mark Hansen of UCLA Statistics.
 </div>
