--- a/Labs/lab2/intro_to_data.Rmd
+++ b/Labs/lab2/intro_to_data.Rmd
@@ -7,7 +7,7 @@ output:
     css: ../lab.css
 ---
 
-```{r global_options, include=FALSE}
+```{r global-options, include=FALSE}
 knitr::opts_chunk$set(eval = FALSE)
 library(dplyr)
 library(ggplot2)
@@ -100,7 +100,7 @@ you with what code stands for which airport.)
 A very useful function for taking a quick peek at your data frame, and viewing
 its dimensions and data types is `str`, which stands for **str**ucture.
 
-```{r cdc}
+```{r str}
 str(nycflights)
 ```
 
@@ -119,14 +119,14 @@ In this lab we will explore these questions using the `dplyr` package for data
 wrangling and the `ggplot2` package for data visualization. So let's load these 
 packages:
 
-```{r}
+```{r packages}
 library(ggplot2)
 library(dplyr)
 ```
 
 ### Seven verbs
 
-The `dplyr` package offers seven verbs (functions) for basic of data 
+The `dplyr` package offers seven verbs (functions) for basic data 
 manipulation:
 
 - `filter()`
@@ -147,19 +147,19 @@ future lab.
 We can examine the distribution of departure delays of all flights with a 
 histogram.
 
-```{r hist-age-geom}
+```{r hist-dep-delay}
 qplot(x = dep_delay, data = nycflights, geom = "histogram")
 ```
 
-This functions says to plot `dep_delay` from the `nycflights` data frame on the 
-x-axis. It also defines a `geom` (short for geometric object), which describes 
-the type of plot you will produce. 
+This function says to plot the `dep_delay` variable from the `nycflights` data 
+frame on the x-axis. It also defines a `geom` (short for geometric object), 
+which describes the type of plot you will produce. 
 
 Histograms are generally a very good way to see the shape of a single 
 distribution, but that shape can change depending on how the data is split 
 between the different bins. You can easily define the binwidth you want to use:
 
-```{r hist-bmi}
+```{r hist-dep-delay-bins}
 qplot(x = dep_delay, data = nycflights, geom = "histogram", binwidth = 15)
 qplot(x = dep_delay, data = nycflights, geom = "histogram", binwidth = 150)
 ```
@@ -170,7 +170,7 @@ If we want to focus on departure delays of flights headed to RDU only, we need t
 first `filter` the data for flights headed to RDU (`dest == "RDU"`) and then make
 a histogram of only departure delays of only those flights.
 
-```{r}
+```{r rdu-flights-hist}
 rdu_flights <- nycflights %>%
   filter(dest == "RDU")
 qplot(x = dep_delay, data = rdu_flights, geom = "histogram")
@@ -179,12 +179,12 @@ qplot(x = dep_delay, data = rdu_flights, geom = "histogram")
 Let's decipher these three lines of code:
 
 - Line 1: Take the `nycflights` data frame, `filter` for flights headed to RDU, and 
-save as a new data frame called `rdu_flights`.
+save the result as a new data frame called `rdu_flights`.
     + `==` means "if it's equal to".
-    + `RDU` goes in quotation marks because it's a character string.
+    + `RDU` is in quotation marks since it is a character string.
 - Line 2: Basically the same `qplot` call from earlier for making a histogram, 
-except the data frame is not the data frame of all flights, but the newly 
-constructed `rdu_flights`.
+except that it uses the data frame for flights headed to RDU instead of all
+flights.
 
 <div id="boxedtext">
 **Logical operators: ** Filtering for certain observations (e.g. flights from a 
@@ -202,13 +202,13 @@ analysis are as follows:
 
 We can also obtain numerical summaries for these flights:
 
-```{r}
+```{r rdu-flights-summ}
 rdu_flights %>%
-  summarise(mean_ddel = mean(dep_delay), sd_ddel = sd(dep_delay), n = n())
+  summarise(mean_dd = mean(dep_delay), sd_dd = sd(dep_delay), n = n())
 ```
 
 Note that in the `summarise` function we created a list of two elements. The 
-names of these elements are user defined, like `mean_ddel`, `sd_ddel`, `n`, and 
+names of these elements are user defined, like `mean_dd`, `sd_dd`, `n`, and 
 you could customize these names as you like (just don't use spaces in your 
 names). Calculating these summary statistics also require that you know the 
 function calls. Note that `n()` reports the sample size.
@@ -231,22 +231,22 @@ single numerical variable are as follows:
     and save this data frame as `sfo_feb_flights`. How many flights 
     meet these criteria? 
     
-1.  Describe the distribution of the arrival delays of these flights using a 
+1.  Describe the distribution of the **arrival** delays of these flights using a 
     histogram and appropriate summary statistics. **Hint:** The summary 
-    statistics you need will depend on the shape of the distribution.
+    statistics you use should depend on the shape of the distribution.
     
 Another useful functionality is being able to quickly calculate summary 
 statistics for various groups in your data frame. For example, we can modify the 
-above command using the `group_by` function  to get the same summary stats for 
-males and females:
+above command using the `group_by` function to get the same summary stats for 
+each origin airport:
 
-```{r summary-custom-list-gender}
+```{r summary-custom-list-origin}
 rdu_flights %>%
   group_by(origin) %>%
-  summarise(mean_ddel = mean(dep_delay), sd_ddel = sd(dep_delay), n = n())
+  summarise(mean_dd = mean(dep_delay), sd_dd = sd(dep_delay), n = n())
 ```
 
-Here, we first grouped the data by gender, and then calculated the summary 
+Here, we first grouped the data by `origin`, and then calculated the summary 
 statistics.
 
 1.  Calculate the median and interquartile range for `arr_delay`s of flights in
@@ -266,11 +266,11 @@ we are learning, we need to
     + `summarise` mean departure delays.
 - Then, we need to `arrange` these average delays in `desc`ending order
 
-```{r}
+```{r mean-dep-delay-months}
 nycflights %>%
   group_by(month) %>%
-  summarise(mean_ddel = mean(dep_delay)) %>%
-  arrange(desc(mean_ddel))
+  summarise(mean_dd = mean(dep_delay)) %>%
+  arrange(desc(mean_dd))
 ```
 
 1.  Which month has the highest average departure delay from an NYC airport? What
@@ -278,19 +278,19 @@ nycflights %>%
     reliable for deciding which month(s) to avoid flying if you really dislike 
     delayed flights.
     
-We can also the distributions of departure delays across months using 
+We can also visualize the distributions of departure delays across months using 
 side-by-side box plots:
 
-```{r}
+```{r delay-month-box}
 qplot(y = dep_delay, x = factor(month), data = nycflights, geom = "boxplot")
 ```
 
 There is some new syntax here: We want departure delays on the y-axis and the
-months on the x-axis to produce side-by-side box plots. Then what does `factor()`
-stand for? R calls categorical variables `factor`s. Months are coded as numbers
-1-12 in the data frame, and hence R automatically assumes `month` to be a 
-numerical variable. `factor(month)` forces the month variable to be treated as 
-categorical.
+months on the x-axis to produce side-by-side box plots. Side-by-side box plots
+require a categorical variable on the x-axis, however in the data frame `month` is 
+stored as a numerical variable (numbers 1 - 12). Therefore we can force R to treat
+this variable as categorical, what R calls a **factor**, variable with 
+`factor(month)`.
 
 ### On time departure rate for NYC airports
 
@@ -312,15 +312,15 @@ percentage.
 Let's start with classifying each flight as "on time" or "delayed" by
 creating a new variable with the `mutate` function.
 
-```{r}
+```{r dep-type}
 nycflights <- nycflights %>%
   mutate(dep_type = ifelse(dep_delay < 5, "on time", "delayed"))
 ```
 
 The first argument in the `mutate` function is the name of the new variable
-we want to create, `dep_type`. Then if `dep_delay < 5` we classify the flight
-as `"on time"` and `"delayed"` if not (i.e. if the flight is delayed for 5 
-minutes or more).
+we want to create, in this case `dep_type`. Then if `dep_delay < 5` we classify 
+the flight as `"on time"` and `"delayed"` if not, i.e. if the flight is delayed 
+for 5 or more minutes.
 
 Note that we are also overwriting the `nycflights` data frame with the new 
 version of this data frame that includes the new `dep_type` variable.
@@ -350,7 +350,7 @@ qplot(x = origin, fill = dep_type, data = nycflights, geom = "bar")
 
 <div class="oyo">
 
--   Mutate the data so that it includes a new variable that contains the 
+-   Mutate the data frame so that it includes a new variable that contains the 
     average speed, `avg_speed` traveled by the plane for each flight (in mph).
     **Hint:** Average speed can be calculated as distance divided by
     number of hours of travel, and note that `air_time` is given in minutes.
@@ -375,7 +375,7 @@ qplot(x = origin, fill = dep_type, data = nycflights, geom = "bar")
 
 -   Replicate the following plot. **Hint:** The data frame plotted only
     contains flights from American Airlines, Delta Airlines, and United
-    Airlines, and the points are `color`ed by `carrier. Once you replicate
+    Airlines, and the points are `color`ed by `carrier`. Once you replicate
     the plot, determine (roughly) what the cutoff point is for departure
     delays where you can still expect to get to your destination on time.
 
