--- a/Application Exercises/Unit 2/2.2 Bayesian inference/app_Bayes_inf.tex
+++ b/Application Exercises/Unit 2/2.2 Bayesian inference/app_Bayes_inf.tex
@@ -68,6 +68,8 @@ Show all your work when answering the questions below.
 \end{minipage}
 }
 
+\pagebreak
+
 \item When the employee finds out that they tested positive, they refuse the test results, and say they would like to be tested again. What is the new prior probability you should use for this employee being a user of this drug?
 
 \soln{1cm}{P(drug user) = 0.39}
