--- a/Slides/02_unit2/deck2/u2_deck2.tex
+++ b/Slides/02_unit2/deck2/u2_deck2.tex
@@ -151,7 +151,7 @@ missing and you still have not given me your info on the Google doc, please do t
 
 \item Based on that data, you update your beliefs.  
 
-\item These new beleifs are called \textbf{posterior beliefs} (or posterior probabilities), because they are \textbf{post}-data.
+\item These new beliefs are called \textbf{posterior beliefs} (or posterior probabilities), because they are \textbf{post}-data.
 
 \item You can iterate this process.
 
@@ -231,21 +231,14 @@ We'll play a game to demonstrate this approach:
 
 \item You won't know which die I'm holding in which hand, left (L) or right (R). {\footnotesize left = YOUR left}
 
-\pause
-
 \item You pick die (L or R), I roll it, and I tell you if you win or not, where winning is getting a number $\ge$ 4. If you win, you get a piece of candy. If you lose, I get to keep the candy.
-
-\pause
 
 \item We'll play this multiple times with different contestants.
 
-\pause
-
 \item I will not swap the sides the dice are on at any point.
 
-\pause
-
 \item You get to pick how long you want play, but there are costs associated with playing longer.
+
 \end{itemize}
 
 \end{frame}
