--- a/Slides/02_unit2/deck2/u2_deck2H.tex
+++ b/Slides/02_unit2/deck2/u2_deck2H.tex
@@ -151,7 +151,7 @@ missing and you still have not given me your info on the Google doc, please do t
 
 \item Based on that data, you update your beliefs.  
 
-\item These new beleifs are called \textbf{posterior beliefs} (or posterior probabilities), because they are \textbf{post}-data.
+\item These new beliefs are called \textbf{posterior beliefs} (or posterior probabilities), because they are \textbf{post}-data.
 
 \item You can iterate this process.
 
