--- a/Slides/02_unit2/deck3/u2_deck3H.tex
+++ b/Slides/02_unit2/deck3/u2_deck3H.tex
@@ -56,7 +56,7 @@
 %%%%%%%%%%%
 
 \title{Unit 2: Probability and distributions}
-\subtitle{2. Normal distribution}
+\subtitle{3. Normal and binomial distributions}
 \author{\CourseName}
 \date{}
 \institute{\InstituteName}
@@ -104,6 +104,12 @@ of order $\rightarrow$ \red{will result in point deductions if not legible}
 all pages in order $\rightarrow$ \red{will result in point deductions if not legible}
 \item Best: Typed using a word processor and PDFed
 \end{itemize}
+
+\item RA 3 on Wednesday
+
+\item PS 2 due Friday, PA 2 due Sunday
+
+\item Discussion section tomorrow: Normal and binomial distribution problems + any questions regarding Unit 3
 
 \end{itemize}
 
