--- a/Slides/04_unit4/deck2/u4_deck2.tex
+++ b/Slides/04_unit4/deck2/u4_deck2.tex
@@ -8,11 +8,11 @@
 \documentclass[slidestop,compress,mathserif,12pt,t,professionalfonts,xcolor=table]{beamer}
 
 % solution stuff
-%\newcommand{\solnMult}[1]{
-%\only<1>{#1}
-%\only<2->{\red{\textbf{#1}}}
-%}
-%\newcommand{\soln}[1]{\textit{#1}}
+\newcommand{\solnMult}[1]{
+\only<1>{#1}
+\only<2->{\red{\textbf{#1}}}
+}
+\newcommand{\soln}[1]{\textit{#1}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Option 2: Handouts, without solutions (post before class)    %
@@ -25,8 +25,8 @@
 % \pgfpagesuselayout{4 on 1}[letterpaper,landscape,border shrink=5mm]
 
 % % solution stuff
- \newcommand{\solnMult}[1]{#1}
- \newcommand{\soln}[1]{}
+% \newcommand{\solnMult}[1]{#1}
+% \newcommand{\soln}[1]{}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Option 3: Handouts, with solutions (may post after class if need be)    %
@@ -482,11 +482,11 @@ for the median RT score of horror movies using the standard error method.}
 {
 \pause
 \begin{center}
-\includegraphics[width = \textwidth]{figures/movies/t_90}
+\includegraphics[width = \textwidth]{figures/movies/t_19}
 \end{center}
 }
 
-\soln{\[ 43.5 \pm (1.66 \times 4.88) = (35.4, 51.6) \] }
+\soln{\[ 43.5 \pm (1.73 \times 4.88) = (35.1, 51.9) \] }
 
 \end{frame}
 
