add comments on midterm course feedback

--- a/Slides/04_unit4/deck3/u4_deck3.tex
+++ b/Slides/04_unit4/deck3/u4_deck3.tex
@@ -8,11 +8,11 @@
 \documentclass[slidestop,compress,mathserif,12pt,t,professionalfonts,xcolor=table]{beamer}
 
 % solution stuff
-%\newcommand{\solnMult}[1]{
-%\only<1>{#1}
-%\only<2->{\red{\textbf{#1}}}
-%}
-%\newcommand{\soln}[1]{\textit{#1}}
+\newcommand{\solnMult}[1]{
+\only<1>{#1}
+\only<2->{\red{\textbf{#1}}}
+}
+\newcommand{\soln}[1]{\textit{#1}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Option 2: Handouts, without solutions (post before class)    %
@@ -25,8 +25,8 @@
 % \pgfpagesuselayout{4 on 1}[letterpaper,landscape,border shrink=5mm]
 
 % % solution stuff
- \newcommand{\solnMult}[1]{#1}
- \newcommand{\soln}[1]{}
+% \newcommand{\solnMult}[1]{#1}
+% \newcommand{\soln}[1]{}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Option 3: Handouts, with solutions (may post after class if need be)    %
@@ -97,6 +97,15 @@
 \begin{itemize}
 
 \item Watch ANOVA videos before next class
+
+\item Midterm course feedback:
+\begin{itemize}
+\item 58\% think pace is about right, nobody thinks it's too slow :)
+\item 42\% learn most from videos, 25\% from problem sets, 15\% from application exercises, 10\% from reading the textbook
+\item Clickers are a hit, TAs have been helpful, amount of work put into class doesn't vary much by previous background
+\item Returning PS before midterm -- huge ask from TAs, but I will solve any questions you ask about in office hours / midterm review / Piazza
+\item Grading of PS -- a randomly assigned TA grades it each time, for consistency throughout the semester
+\end{itemize}
 
 \end{itemize}
 
