--- a/Slides/04_unit4/deck4/u4_deck4.tex
+++ b/Slides/04_unit4/deck4/u4_deck4.tex
@@ -7,7 +7,7 @@
 
 \documentclass[slidestop,compress,mathserif,12pt,t,professionalfonts,xcolor=table]{beamer}
 
-% solution stuff
+%% solution stuff
 \newcommand{\solnMult}[1]{
 \only<1>{#1}
 \only<2->{\red{\textbf{#1}}}
