app ex 6.2 edits

--- a/Application Exercises/Unit 6/6.2 Linear regression/app_Lin_reg.tex
+++ b/Application Exercises/Unit 6/6.2 Linear regression/app_Lin_reg.tex
@@ -1,6 +1,6 @@
 \documentclass[11pt]{article}
 
-\input{../app_style.tex}
+\input{../../app_style.tex}
 \usepackage{fancyvrb}	% for colored code chunks
 
 %%%%%%%%%%%
@@ -38,7 +38,7 @@ Linear regression}
 \inst{$\:$ \\
 Team name: \rule{10cm}{0.5pt} \\
 $\:$ \\
-Lab section: $\qquad$ 8:30 $\qquad$ 10:05 $\qquad$ 11:45 $\qquad$ 1:25 $\qquad$ 3:05 \\
+Lab section: $\qquad$ 8:30 $\qquad$ 10:05 $\qquad$ 11:45 $\qquad$ 1:25 $\qquad$ 3:05 $\qquad$ 4:40 \\
 $\:$ \\
 Write your responses in the spaces provided below. WRITE LEGIBLY and SHOW ALL WORK! 
 Only one submission per team is required. One team will be randomly selected and their 
@@ -57,7 +57,7 @@ First, load the dataset and the R Markdown template:
 
 {\scriptsize
 \begin{Verbatim}[frame=single, formatcom=\color{blue}]
-download("https://stat.duke.edu/courses/Fall15/sta101.002/rmd/app_Lin_reg.Rmd", destfile = "app_Lin_reg.Rmd")
+download.file("https://stat.duke.edu/courses/Spring16/sta101.001/rmd/app_Lin_reg.Rmd", destfile = "app_Lin_reg.Rmd")
 \end{Verbatim}
 }
 
