fix link to download Rmd file

--- a/Application Exercises/Unit 6/6.2 Linear regression/app_Lin_reg.tex
+++ b/Application Exercises/Unit 6/6.2 Linear regression/app_Lin_reg.tex
@@ -57,7 +57,7 @@ First, load the dataset and the R Markdown template:
 
 {\scriptsize
 \begin{Verbatim}[frame=single, formatcom=\color{blue}]
-download.file("https://stat.duke.edu/courses/Spring16/sta101.001/rmd/app_Lin_reg.Rmd", destfile = "app_Lin_reg.Rmd")
+download.file("http://stat.duke.edu/courses/Spring16/sta101.001/rmd/app_Lin_reg.Rmd", destfile = "app_Lin_reg.Rmd")
 \end{Verbatim}
 }
 
